finalisation version mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Reservia</title>
-    <!-- <script src="https://kit.fontawesome.com/4e6f889c4e.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <div class="app-container">
@@ -57,7 +56,7 @@
             <div class="populaire__titre">
                 <h3 class="populaire__titre--txt">Les plus populaires</h3><i class="fas fa-chart-line"></i>
             </div>
-            <div class="populaire__card">
+            <a class="populaire__card" href=''>
                 <picture class="populaire__card--img">
                     <source srcset="./assets/hebergement/hotel_soleil_matin_m.jpg" media="(min-width: 376px)">
                     <source srcset="/.assets/hebergement/hotel_soleil_matin_l.jpg" media="(min-width: 900px)">
@@ -74,8 +73,8 @@
                         <li><i class="fas fa-star"></i></li>
                     </ul>
                 </div>
-            </div>
-            <div class="populaire__card">
+            </a>
+            <a class="populaire__card" href=''>
                 <picture class="populaire__card--img">
                     <source srcset="./assets/hebergement/au_coeur_de_leau_m.jpg" media="(min-width: 376px)">
                     <source srcset="/.assets/hebergement/au_coeur_de_leau_l.jpg" media="(min-width: 900px)">
@@ -92,8 +91,8 @@
                         <li><i class="fas fa-star grey"></i></li>
                     </ul>
                 </div>
-            </div>
-            <div class="populaire__card">
+            </a>
+            <a class="populaire__card" href=''>
                 <picture class="populaire__card--img">
                     <source srcset="./assets/hebergement/hotel_tout_bleu_et_blanc_m.jpg" media="(min-width: 376px)">
                     <source srcset="/.assets/hebergement/hotel_tout_bleu_et_blanc_l.jpg" media="(min-width: 900px)">
@@ -110,12 +109,12 @@
                         <li><i class="fas fa-star grey"></i></li>
                     </ul>
                 </div>
-            </div>
+            </a>
         </aside>
         <section id="hebergements" class="h">
             <h3 class="h--titre">Hébergements à Marseille</h3>
             <div class="h__cards">
-                <div class="h__cards__item">
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/auberge_cannebiere_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/auberge_cannebiere_l.jpg" media="(min-width: 900px)">
@@ -132,15 +131,15 @@
                             <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>  
-                </div>
-                <div class="h__cards__item">
+                </a>
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/hotel_du_port_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/hotel_du_port_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/hebergement/hotel_du_port_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h3>Hôtel du port</h3>
+                        <h4>Hôtel du port</h4>
                         <p>Nuit à partir de 52€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -150,15 +149,15 @@
                             <li><i class="fas fa-star"></i></li>
                         </ul>
                     </div>
-                </div>
-                <div class="h__cards__item">
+                </a>
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/hotel_les_mouettes_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/hotel_les_mouettes_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/hebergement/hotel_les_mouettes_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h3>Hôtel Les mouettes</h3>
+                        <h4>Hôtel Les mouettes</h4>
                         <p>Nuit à partir de 76€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -168,15 +167,15 @@
                             <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
-                </div>
-                <div class="h__cards__item">
+                </a>
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/hotel_de_la_mer_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/hotel_de_la_mer_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/hebergement/hotel_de_la_mer_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h3>Hôtel de la mer</h3>
+                        <h4>Hôtel de la mer</h4>
                         <p>Nuit à partir de 46€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -186,15 +185,15 @@
                             <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
-                </div>
-                <div class="h__cards__item">
+                </a>
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/auberge_le_panier_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/auberge_le_panier_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/hebergement/auberge_le_panier_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h3>Auberge le Panier</h3>
+                        <h4>Auberge le Panier</h4>
                         <p>Nuit à partir de 23€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -204,15 +203,15 @@
                             <li><i class="fas fa-star grey"></i></li>
                         </ul>
                     </div>
-                </div>
-                <div class="h__cards__item">
+                </a>
+                <a class="h__cards__item" href=''>
                     <picture class="h__cards__item--img">
                         <source srcset="./assets/hebergement/hotel_chez_amina_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/hebergement/hotel_chez_amina_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/hebergement/hotel_chez_amina_s.jpg" alt="">
                     </picture>
                     <div class="h__cards__description">
-                        <h3>Hôtel chez Amina</h3>
+                        <h4>Hôtel chez Amina</h4>
                         <p>Nuit à partir de 96€</p>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
@@ -222,7 +221,7 @@
                             <li><i class="fas fa-star"></i></li>
                         </ul>
                     </div>
-                </div>
+                </a>
             </div>
             <h4 class=h__plus >Afficher plus</h4>
         </section>
@@ -230,54 +229,54 @@
         <section id="activite" class="activites">
             <h3 class="activites--titre">Activités à Marseille</h3>
             <div class="activites__bloc">
-                <div class="activites__bloc--card">
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/vieux_port_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/vieux_port_l.jpg" media="(min-width: 900px)">
-                        <img src="./assets/activite/vieux_port.jpg" alt="">
+                        <img src="./assets/activite/vieux_port_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Vieux Port</h3>
-                </div>
-                <div class="activites__bloc--card">
+                </a>
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/fort_pomegues_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/fort_pomegues_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/activite/fort_pomegues_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Fort de Pomègues</h3>
-                </div>
-                <div class="activites__bloc--card">
+                </a>
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/iles_du_frioul_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/iles_du_frioul_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/activite/iles_du_frioul_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Îles du Frioul</h3>
-                </div>
-                <div class="activites__bloc--card">
+                </a>
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/calanques_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/calanques_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/activite/calanques_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Parc National des Calanques</h3>
-                </div>
-                <div class="activites__bloc--card">
+                </a>
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/dame_de_la_garde_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/dame_de_la_garde_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/activite/dame_de_la_garde_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Notre-Dame-de-la-Garde</h3>
-                </div>
-                <div class="activites__bloc--card">
+                </a>
+                <a class="activites__bloc--card" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/parc_longchamps_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/parc_longchamps_l.jpg" media="(min-width: 900px)">
                         <img src="./assets/activite/parc_longchamps_s.jpg" alt="">
                     </picture>
                     <h3 class="activites__bloc--card--nom">Parc Longchamp</h3>
-                </div>
+                </a>
             </div>
         </section>
 
