header.css organised

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <section id="activite" class="activites">
             <h3 class="activites--titre">Activités à Marseille</h3>
             <div class="activites__bloc">
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card stretch" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/vieux_port_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/vieux_port_l.jpg" media="(min-width: 900px)">
