--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                         <img src="./assets/hebergement/hotel_soleil_matin_s.jpg" alt="">
                     </picture>
                     <div class="populaire__card--description">
-                        <h4>Hôtel Le soleil du matin</h4>
-                        <p>Nuit à partir de 128€</p>
+                        <div class="populaire__card--description--txt">
+                            <h4>Hôtel Le soleil du matin</h4>
+                            <p>Nuit à partir de 128€</p>
+                        </div>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
@@ -227,14 +229,13 @@
                         </div>
                     </a>
                 </div>
-                <br />
                 <h4 class=h__plus >Afficher plus</h4>
             </section>
         </div>
         <section id="activite" class="activites">
             <h3 class="activites--titre">Activités à Marseille</h3>
             <div class="activites__bloc">
-                <a class="activites__bloc--card stretch" href=''>
+                <a class="activites__bloc--card stretch1" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/vieux_port_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/vieux_port_l.jpg" media="(min-width: 900px)">
@@ -242,7 +243,7 @@
                     </picture>
                     <h3 class="activites__bloc--card--nom">Vieux Port</h3>
                 </a>
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card normal1" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/fort_pomegues_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/fort_pomegues_l.jpg" media="(min-width: 900px)">
@@ -250,7 +251,7 @@
                     </picture>
                     <h3 class="activites__bloc--card--nom">Fort de Pomègues</h3>
                 </a>
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card normal2" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/iles_du_frioul_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/iles_du_frioul_l.jpg" media="(min-width: 900px)">
@@ -258,7 +259,7 @@
                     </picture>
                     <h3 class="activites__bloc--card--nom">Îles du Frioul</h3>
                 </a>
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card stretch2" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/calanques_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/calanques_l.jpg" media="(min-width: 900px)">
@@ -266,7 +267,7 @@
                     </picture>
                     <h3 class="activites__bloc--card--nom">Parc National des Calanques</h3>
                 </a>
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card normal3" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/dame_de_la_garde_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/dame_de_la_garde_l.jpg" media="(min-width: 900px)">
@@ -274,7 +275,7 @@
                     </picture>
                     <h3 class="activites__bloc--card--nom">Notre-Dame-de-la-Garde</h3>
                 </a>
-                <a class="activites__bloc--card" href=''>
+                <a class="activites__bloc--card normal4" href=''>
                     <picture class="activites__bloc--card--img">
                         <source srcset="./assets/activite/parc_longchamps_m.jpg" media="(min-width: 376px)">
                         <source srcset="/.assets/activite/parc_longchamps_l.jpg" media="(min-width: 900px)">
