--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
                         <img src="./assets/hebergement/au_coeur_de_leau_s.jpg" alt="">
                     </picture>
                     <div class="populaire__card--description">
-                        <h4>Au coeur de l'eau Chambre d'hôtes</h4>
-                        <p>Nuit à partir de 71€</p>
+                        <div class="populaire__card--description--txt">
+                            <h4>Au coeur de l'eau Chambre d'hôtes</h4>
+                            <p>Nuit à partir de 71€</p>
+                        </div>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
@@ -105,8 +107,10 @@
                         <img src="./assets/hebergement/hotel_tout_bleu_et_blanc_s.jpg" alt="">
                     </picture>
                     <div class="populaire__card--description">
-                        <h4>Hôtel tout bleu et Blanc</h4>
-                        <p>Nuit à partir de 68€</p>
+                        <div class="populaire__card--description--txt">
+                            <h4>Hôtel tout bleu et Blanc</h4>
+                            <p>Nuit à partir de 68€</p>
+                        </div>
                         <ul class="etoiles">
                             <li><i class="fas fa-star"></i></li>
                             <li><i class="fas fa-star"></i></li>
